| Bug #26899 | ndb_restore cannot restore selected tables and databases | ||
|---|---|---|---|
| Submitted: | 7 Mar 2007 7:15 | Modified: | 10 Apr 2007 7:58 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1,5.0,5.1 | OS: | Any |
| Assigned to: | Tomas Ulin | Target Version: | |
| Tags: | ndb_restore | ||
[7 Mar 2007 7:15]
Tomas Ulin
[7 Mar 2007 7:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21325
[7 Mar 2007 9:42]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21335
[30 Mar 2007 10:54]
Bugs System
Pushed into 5.0.40
[6 Apr 2007 12:02]
Jon Stephens
Documented feature change for 5.0 in 5.0.40 changelog and ndb_restore description in Manual. Returned to PatchPending while waiting for 5.1 fix.
[7 Apr 2007 10:17]
Tomas Ulin
5.1.18
[10 Apr 2007 7:58]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented feature addition for 5.1, noted in 5.1.18 changelog.
