Bug#26899 ndb_restore cannot restore selected tables and databases Bug#26900 ndb_restore printout option does not give structured data - add data stucturing options - add database and table selection options